dnl
dnl

AC_PREREQ(2.50)

AC_INIT(org.eclipse.ptp.utils, 1.0.0)
AC_CONFIG_SRCDIR(src/args.c)
AC_CONFIG_HEADERS(config.h)

AM_INIT_AUTOMAKE

AC_CANONICAL_BUILD

CFLAGS="$CFLAGS -Wall"

dnl
dnl Check for programs.
dnl

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
