dnl
dnl

AC_PREREQ(2.50)

AC_INIT(org.eclipse.ptp.utils, 2.0.1)
AC_CONFIG_SRCDIR(src/args.c)
AC_CONFIG_HEADERS(config.h)

AM_INIT_AUTOMAKE

AC_CANONICAL_BUILD

dnl
dnl Check for programs.
dnl

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

os=`uname -s`
if test "x$os" = "xAIX" ; then
	CFLAGS="$CFLAGS -qinfo=gen -qcpluscmt"
else
	CFLAGS="$CFLAGS -Wall"
fi

dnl
dnl Check for asprintf
dnl
AC_CHECK_FUNCS(asprintf)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
