dnl
dnl

AC_PREREQ(2.50)

AC_INIT(org.eclipse.ptp.orte, 1.0.0)
AC_CONFIG_SRCDIR(src/orte_server.c)
AC_CONFIG_HEADERS(config.h)

AM_INIT_AUTOMAKE

AC_CANONICAL_BUILD

CFLAGS="$CFLAGS -Wall"

dnl
dnl Check for programs.
dnl

AC_PROG_CC([mpicc])
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LIBTOOL

dnl
dnl Check for header files.
dnl

AC_HEADER_STDC

dnl Open MPI
AC_PATH_PROG(OMPI_INFO, ompi_info, no)
if test "$ac_cv_path_OMPI_INFO" != no; then
	AC_PATH_PROG(ORTED, orted, no)
	if test "$ac_cv_path_ORTED" != no ; then
		AC_DEFINE(OMPI,1,[Enable Open MPI support.])
		AC_DEFINE_UNQUOTED(ORTED, "$ac_cv_path_ORTED", [Location of orted command.])
	fi
fi

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([../org.eclipse.ptp.proxy ../org.eclipse.ptp.utils])
AC_OUTPUT
