dnl
dnl

AC_PREREQ(2.50)

AC_INIT(org.eclipse.ptp.orte, 2.0.1)
AC_CONFIG_SRCDIR(src/ptp_orte_proxy.c)
AC_CONFIG_HEADERS(config.h)

AM_INIT_AUTOMAKE

AC_CANONICAL_BUILD

dnl
dnl Eclipse adds version number to end of package when deploying via update site
dnl

UTILS="../org.eclipse.ptp.utils"
if test ! -d $UTILS; then
	UTILS="`echo ${UTILS}_${PACKAGE_VERSION}.*`"
	if test ! -d $UTILS; then
		AC_MSG_ERROR([utils directory not found])
	fi
fi

PROXY="../org.eclipse.ptp.proxy"
if test ! -d $PROXY; then
	PROXY="`echo ${PROXY}_${PACKAGE_VERSION}.*`"
	if test ! -d $PROXY; then
		AC_MSG_ERROR([proxy directory not found])
	fi
fi

dnl
dnl Check for programs.
dnl

AC_PROG_CC([mpicc])
AM_PROG_CC_C_O
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

CFLAGS="$CFLAGS -Wall -I$UTILS/include -I$PROXY/include"
LIBS="$LIBS -L$UTILS -L$PROXY"

dnl
dnl Check for libraries.
dnl
AC_CHECK_LIB(utils, bitset_new)
AC_CHECK_LIB(proxysvr, proxy_svr_init)

dnl
dnl Check for header files.
dnl

AC_HEADER_STDC

dnl
dnl Check for types
dnl
AC_TYPE_SIGNAL

dnl Open MPI
AC_PATH_PROG(ORTED, [orted], no)
if test "$ac_cv_path_ORTED" != no; then
	AC_DEFINE(OMPI,1,[Enable Open MPI support.])
	AC_DEFINE_UNQUOTED(ORTED,"$ac_cv_path_ORTED",[Location of orted program])
else
	AC_MSG_ERROR([Open MPI not installed, skipping...])
fi

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
